--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.2",
+    "@vercel/analytics": "^1.6.1",
     "mongoose": "^9.0.0",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
