--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@supabase/supabase-js": "^2.86.2",
     "@vercel/analytics": "^1.6.1",
     "mongoose": "^9.0.0",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.11",
+    "pdfjs-dist": "^3.11.174",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
-    "react-pdf": "^10.2.0"
+    "react-pdf": "^8.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4"
